updated the advisor details, created widgets and models

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   animate_do: ^4.2.0 # animations
   dotted_border: ^2.1.0
   flutter_native_splash: ^2.4.6
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
