--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_native_splash: ^2.4.6
   timeline_tile: ^2.0.0
+  pdf: ^3.11.3
+  printing: ^5.12.0
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
