--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   pdf: ^3.11.3
   printing: ^5.12.0
   path_provider: ^2.1.2
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
