--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,13 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_native_splash: ^2.4.6
   url_launcher: 
+  provider: ^6.1.5
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
+  printing: ^5.14.2
+  http: ^1.4.0
+  permission_handler: ^11.3.0 # For handling Android permissions
+  
 
 dev_dependencies:
   flutter_test:
