bottomNavigation bar builded

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   latlong2: ^0.9.1
   avatar_glow: ^3.0.1
   flutter_compass: ^0.8.1
+  persistent_bottom_nav_bar_v2:
 
 dev_dependencies:
   flutter_test:
