--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   printing: ^5.12.0
   path_provider: ^2.1.2
   share_plus: ^11.0.0
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
