updated icons and logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icons/settings_section/
+    - assets/icons/settings_section/home_page/
+    - assets/icons/settings_section/notification_page/
 
 # Splash Screen
 flutter_native_splash:
