hospital place and segment tab bar created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   avatar_glow: ^3.0.1
   flutter_compass: ^0.8.1
   persistent_bottom_nav_bar_v2:
+  toggle_switch:
 
 dev_dependencies:
   flutter_test:
