--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   avatar_glow: ^3.0.1
   flutter_compass: ^0.8.1
   font_awesome_flutter: ^10.4.0
+  file_picker: ^10.2.0
 
 dev_dependencies:
   flutter_test:
