--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   image_picker:
   font_awesome_flutter: ^10.4.0
   file_picker: ^10.2.0
+  url_launcher:
+  provider: ^6.1.5
+  http: ^1.4.0
+  permission_handler: ^11.3.0 # For handling Android permissions
+  country_code_picker: ^3.3.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
