added reeja's code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,11 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icons/settings_section/
+    - assets/icons/settings_section/home_page/
+    - assets/icons/settings_section/notification_page/
+    - assets/images/share/
+    - assets/images/map/
 
 # Splash Screen
 flutter_native_splash:
