--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   persistent_bottom_nav_bar_v2:
   toggle_switch:
   image_picker:
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
