--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   toggle_switch:
   image_picker:
   file_picker: ^8.0.0+1
+  fl_chart:
+  pie_chart:
 
 dev_dependencies:
   flutter_test:
