--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_compass: ^0.8.1 # Compass sensor data
   font_awesome_flutter: ^10.4.0 # Font Awesome icons
   file_picker: ^10.2.0 # Pick files from device storage
+  image_picker: ^1.0.4
+  permission_handler: ^11.0.1
 
 
 dev_dependencies:
